# deca-weather

./: .gitignore  Cargo.toml  README.md
src/: args.rs  cities.rs  db.rs  lib.rs  main.rs  models.rs  open_meteo.rs  wmo.rs
